--- a/src/app/basic/basic.component.html
+++ b/src/app/basic/basic.component.html
@@ -1,8 +1,8 @@
-<div class="container-fluid">
-  <div class="row">
+<div class="container-fluid bg-dark mt-2">
+  <div class="row justify-content-center pt-3">
     <div class="col-xs-12 col-12 col-md-4 form-group">
       <input class="form-control" placeholder="Datepicker" [(ngModel)]="startDate" name="startDate" bsDatepicker
-        [bsConfig]="{ dateInputFormat: 'DD-MM-YYYY', containerClass: 'theme-blue' }"[maxDate]="endDate">
+        [bsConfig]="{ dateInputFormat: 'DD-MM-YYYY', containerClass: 'theme-blue' }" [maxDate]="endDate">
     </div>
 
     <div class="col-xs-12 col-12 col-md-4 form-group">
@@ -10,8 +10,11 @@
         [bsConfig]="{ dateInputFormat: 'DD-MM-YYYY', containerClass: 'theme-blue' }" [minDate]="startDate">
     </div>
   </div>
-  <div class="col-xs-12 col-12 col-md-4 form-group">
-    <pre>start date :{{startDate | date : 'dd/MM/yyyy'}}</pre>
-    <pre>end date :{{endDate | date : 'dd/MM/yyyy'}}</pre>
+  <div class="form-inline justify-content-center">
+    <div class="col-xs-12 col-12 col-md-4 form-group ">
+      <pre
+        class="text-light">Start date : {{startDate | date : 'dd/MM/yyyy'}} &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp; End date : {{endDate | date : 'dd/MM/yyyy'}}</pre>
+    </div>
   </div>
+
 </div>
